--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -78,7 +78,10 @@ summary,
 time,
 mark,
 audio,
-video {
+video,
+input,
+form,
+button {
   margin: 0;
   padding: 0;
   border: 0;
@@ -3331,6 +3334,94 @@ i {
   color: inherit;
 }
 
+.body {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  overflow-x: hidden;
+  background-color: #ffffff;
+  color: #2E2E2E;
+}
+
+.layout {
+  min-height: 100vh;
+  flex-direction: column;
+  justify-content: space-between;
+  display: flex;
+}
+
+.layout__main {
+  flex-grow: 1;
+}
+
+.container {
+  max-width: 1680px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.search {
+  position: relative;
+}
+
+.search__input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid #333333;
+  padding-right: 50px;
+  padding-left: 8px;
+}
+
+.search__btn {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  border: none;
+  height: 100%;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: none;
+}
+
+.search__btn svg {
+  width: 24px;
+  height: 24px;
+  display: block;
+}
+
+.btn {
+  padding: 16px 22px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.btn--dark {
+  background-color: #2E2E2E;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
+.btn--green {
+  background-color: #00C25A;
+}
+
+.btn--light {
+  color: #2E2E2E;
+  background: #E5E5E5;
+  background-color: #fff;
+}
+
+.btn:hover {
+  opacity: 0.7;
+}
+
 .text {
   line-height: 1.5;
   font-size: 16px;
@@ -3399,6 +3490,271 @@ i {
   margin-bottom: 2em;
   line-height: 2;
   font-size: inherit;
+}
+
+.accent-line {
+  background-color: #FF3131;
+  color: #ffffff;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.accent-line__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.accent-line__content {
+  padding-right: 65px;
+}
+
+.accent-line__close {
+  padding: 10px;
+  cursor: pointer;
+  transition: 0.3s all;
+}
+
+.accent-line__close:hover {
+  opacity: 0.7;
+}
+
+.accent-line__close svg {
+  width: 20px;
+  height: 20px;
+}
+
+.head-main {
+  padding-top: 25px;
+  padding-bottom: 21px;
+}
+
+.head-main__container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.head-main__section {
+  width: calc(50% - 16px);
+}
+
+.head-main__logo {
+  display: block;
+  width: object-fit;
+  max-width: 364px;
+  width: 100%;
+  height: auto;
+  margin-bottom: 26px;
+}
+
+.head-nav {
+  background-color: #2E2E2E;
+  color: #ffffff;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.head-nav__content {
+  display: flex;
+  align-items: center;
+}
+
+.head-nav__link {
+  text-decoration: none;
+  color: #ffffff;
+  margin-right: 56px;
+  text-transform: uppercase;
+}
+
+.head-nav__link:hover {
+  opacity: 0.7;
+}
+
+.head-nav__link:last-child {
+  margin-right: 0px;
+}
+
+.top-nav {
+  display: flex;
+  align-items: center;
+}
+
+.top-nav__home {
+  display: block;
+  margin-right: 26px;
+  padding: 9px;
+}
+
+.top-nav__home:hover {
+  opacity: 0.7;
+}
+
+.top-nav__home svg {
+  width: 18px;
+  height: 18px;
+}
+
+.top-nav__catalog {
+  display: flex;
+  align-items: center;
+  padding: 9px 13px;
+  cursor: pointer;
+  transition: 0.3s all;
+  text-transform: uppercase;
+  background: none;
+  margin-right: 24px;
+}
+
+.top-nav__catalog:hover {
+  opacity: 0.7;
+}
+
+.top-nav__catalog svg {
+  margin-right: 14px;
+  width: 18px;
+  height: 12px;
+}
+
+.top-nav__link {
+  padding: 9px 13px;
+  margin-right: 24px;
+  text-transform: uppercase;
+  color: #2E2E2E;
+  text-decoration: none;
+}
+
+.top-nav__link--active {
+  border: 2px solid #00C25A;
+}
+
+.top-nav__link:hover {
+  opacity: 0.7;
+}
+
+.top-nav__link:last-child {
+  margin-right: 0px;
+}
+
+.right-nav {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 17px;
+}
+
+.right-nav__nav {
+  display: flex;
+  align-items: center;
+}
+
+.right-nav__link {
+  text-decoration: none;
+  color: #828282;
+  display: block;
+  margin-right: 26px;
+}
+
+.right-nav__link:last-child {
+  margin-right: 0px;
+}
+
+.right-nav__link:hover {
+  opacity: 0.7;
+}
+
+.right-nav__toolbar {
+  display: flex;
+}
+
+.right-nav__btn {
+  margin-left: 20px;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #2E2E2E;
+}
+
+.right-nav__btn span {
+  margin-right: 8px;
+}
+
+.right-nav__btn svg {
+  width: 29px;
+  height: 29px;
+}
+
+.right-info {
+  display: flex;
+  align-items: center;
+}
+
+.right-info__phone {
+  flex-shrink: 0;
+  color: #2E2E2E;
+  font-weight: bold;
+  font-size: 20px;
+  margin-right: 10px;
+  text-decoration: none;
+}
+
+.right-info__phone:hover {
+  opacity: 0.7;
+}
+
+.right-info__text {
+  font-size: 16px;
+  line-height: 1.3;
+}
+
+.right-info__text strong {
+  color: #00C25A;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.intro__columns {
+  display: flex;
+}
+
+.intro__content {
+  background-color: #00C25A;
+  width: 50%;
+  padding: 115px 141px 120px 141px;
+  min-height: 636px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.intro__thumb {
+  width: 50%;
+  min-height: 636px;
+}
+
+.intro__thumb img {
+  display: block;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.intro__logo {
+  margin-bottom: 21px;
+  max-width: 100%;
+  display: block;
+}
+
+.intro__title {
+  font-weight: bold;
+  font-size: 50px;
+  line-height: 60px;
+  margin-bottom: 45px;
+  text-transform: uppercase;
+  flex-grow: 1;
 }
 
 @media all and (min-width: 0px) {
@@ -3480,6 +3836,44 @@ i {
   .mm-wrapper_opening .mm-menu_fullscreen.mm-menu_position-right.mm-menu_opened ~ .mm-slideout {
     -webkit-transform: translate3d(-10000px, 0, 0);
     transform: translate3d(-10000px, 0, 0);
+  }
+}
+
+@media only screen and (max-width: 1700px) {
+  .container {
+    max-width: 1210px;
+  }
+
+  .accent-line {
+    font-size: 16px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+  }
+
+  .head-main__section {
+    width: calc(50% - 10px);
+  }
+
+  .head-nav__link {
+    font-size: 14px;
+    margin-right: 42px;
+    width: -webkit-fill-available;
+  }
+
+  .top-nav__home {
+    margin-right: 19px;
+  }
+
+  .top-nav__catalog {
+    margin-right: 0px;
+  }
+
+  .top-nav__link {
+    margin-right: 0px;
+  }
+
+  .right-info__text {
+    font-size: 14px;
   }
 }
 
