--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -1,13 +1,21 @@
-// .layout {
-// 	min-height: 100vh;
-	
-// }
+.layout {
+	min-height: 100vh;
+	flex-direction: column;
+	justify-content: space-between;
+	display: flex;
+	&__main {
+		flex-grow: 1;
+	}
+}
 
-// .container {
-// 	width: 100%;
-// 	max-width: 1580px;
-// 	margin-left: auto;
-// 	margin-right: auto;
-// 	padding-left: 15px;
-// 	padding-right: 15px;
-// }
+.container {
+	max-width: 1680px;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	padding-left: 15px;
+	padding-right: 15px;
+	@include r(1700) {
+		max-width: 1210px;
+	}
+}
