--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,5 +4,6 @@
 @import "vendor/libs";
 @import "base/general";
 @import "base/layout";
+@import "base/form";
 @import "base/text";
 @import "../blocks/modules";
