--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <title>Балтламинат</title>
-        @@include("../blocks/modules/head/head.html")
-    </head>
-    <body class="body">
+<head>
+    <title>Балтламинат</title>
+    @@include("../blocks/modules/head/head.html")
+</head>
+<body class="body">
+    <div class="layout">
         @@include("../blocks/modules/header/header.html")
+        <main class="layout__main">
+            @@include("../blocks/modules/intro/intro.html")
+            <!-- <a href="" class="btn btn--dark">
+                Кнопка
+            </a> -->
+        </main>
         @@include("../blocks/modules/footer/footer.html")
-        <script src="js/main.js"></script>
-        <script src="js/vendor.js"></script>
-    </body>
+    </div>
+    <script src="js/vendor.js"></script>
+    <script src="js/main.js"></script>
+</body>
 </html>
