--- a/src/views/index.html
+++ b/src/views/index.html
@@ -12,6 +12,7 @@
             <!-- <a href="" class="btn btn--dark">
                 Кнопка
             </a> -->
+            @@include("../blocks/modules/subscribe/subscribe.html")
         </main>
         @@include("../blocks/modules/footer/footer.html")
     </div>
