--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -3395,11 +3395,15 @@ i {
 }
 
 .btn {
-  padding: 16px 22px;
+  height: 50px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   text-decoration: none;
-  display: inline-block;
   font-size: 20px;
   font-weight: bold;
+  transition: 0.3s all;
+  cursor: pointer;
 }
 
 .btn--dark {
@@ -3412,10 +3416,13 @@ i {
   background-color: #00C25A;
 }
 
+.btn--gray {
+  background: #E5E5E5;
+}
+
 .btn--light {
   color: #2E2E2E;
-  background: #E5E5E5;
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 .btn:hover {
@@ -3716,6 +3723,134 @@ i {
   font-weight: bold;
 }
 
+.subscribe {
+  background-color: #2E2E2E;
+  color: #ffffff;
+}
+
+.subscribe__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 33px;
+  padding-bottom: 33px;
+}
+
+.subscribe__text {
+  font-weight: bold;
+  font-size: 20px;
+  min-width: 0px;
+  margin-right: 32px;
+  line-height: 1.25;
+}
+
+.subscribe__form {
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+}
+
+.subscribe__input {
+  height: 50px;
+  border: none;
+  margin-right: 32px;
+  width: 388px;
+  background: #4F4F4F;
+  color: #ffffff;
+  padding-left: 23px;
+  padding-right: 23px;
+  font-family: "Ubuntu", sans-serif;
+}
+
+.subscribe__input:placeholder {
+  color: #BDBDBD;
+}
+
+.subscribe__btn {
+  width: 248px;
+  height: 50px;
+  background-color: #00C25A;
+}
+
+.footer {
+  padding-top: 56px;
+  padding-bottom: 56px;
+  background-color: #00C25A;
+}
+
+.footer__nav {
+  column-count: 4;
+  column-gap: 32px;
+  margin-bottom: 20px;
+}
+
+.footer__link {
+  font-weight: 500;
+  font-size: 18px;
+  color: #ffffff;
+  text-decoration: none;
+  display: block;
+  margin-bottom: 17px;
+}
+
+.footer__link:hover {
+  opacity: 0.7;
+}
+
+.footer__columns {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.footer__column {
+  width: 50%;
+}
+
+.footer__socials {
+  display: flex;
+  margin-bottom: 17px;
+}
+
+.footer__soc-link {
+  width: 32px;
+  height: 32px;
+  display: block;
+  margin-right: 20px;
+}
+
+.footer__soc-link:last-child {
+  margin-right: 0px;
+}
+
+.footer__soc-link:hover {
+  opacity: 0.7;
+}
+
+.footer__soc-link svg {
+  height: 32px;
+  width: 32px;
+}
+
+.footer__text strong {
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.footer__text a {
+  color: #FF3131;
+  text-decoration: none;
+}
+
+.footer__text a:hover {
+  text-decoration: underline;
+}
+
+.footer__btn {
+  width: 303px;
+  margin-bottom: 17px;
+}
+
 .intro__columns {
   display: flex;
 }
@@ -3751,10 +3886,14 @@ i {
 .intro__title {
   font-weight: bold;
   font-size: 50px;
-  line-height: 60px;
   margin-bottom: 45px;
   text-transform: uppercase;
   flex-grow: 1;
+  line-height: 1.2;
+}
+
+.intro__btn {
+  width: 194px;
 }
 
 @media all and (min-width: 0px) {
@@ -3874,6 +4013,32 @@ i {
 
   .right-info__text {
     font-size: 14px;
+  }
+
+  .subscribe__text {
+    margin-right: 20px;
+  }
+
+  .subscribe__input {
+    width: 280px;
+  }
+
+  .footer__btn {
+    width: 280px;
+  }
+
+  .intro__content {
+    padding: 41px 47px 63px 47px;
+    min-height: 500px;
+  }
+
+  .intro__thumb {
+    min-height: 500px;
+  }
+
+  .intro__title {
+    font-weight: bold;
+    font-size: 30px;
   }
 }
 
