--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -4,3 +4,7 @@
 
 // Front
 @import "modules/intro/intro";
+@import "modules/case/case";
+@import "modules/news/news";
+@import "modules/about/about";
+@import "modules/partners/partners";
