--- a/src/styles/base/_text.scss
+++ b/src/styles/base/_text.scss
@@ -3,17 +3,13 @@
 	font-size: 16px;
 	p {
 		margin-bottom: 1em;
-		padding-right: 44px;
-		@include r(1260) {
-			padding-right: 0px;
-		}
 	}
-	blockquote {
-		margin-bottom: 1rem;
-		padding-left: 15px;
-		border-left: 2px solid #CAD4D4;
-		font-style: italic;
-	}
+	// blockquote {
+	// 	margin-bottom: 1rem;
+	// 	padding-left: 15px;
+	// 	border-left: 2px solid #CAD4D4;
+	// 	font-style: italic;
+	// }
 	strong, b {
 		font-weight: bold;
 	}
@@ -28,11 +24,11 @@
 	}
 	figure {
 		display: block;
-		margin-bottom: 22px;
+		margin-bottom: 1rem;
 	}
 	picture {
 		display: block;
-		margin-bottom: 5px;
+		margin-bottom: 1rem;
 	}
 	img {
 		display: block;
@@ -40,20 +36,24 @@
 		height: auto;
 	}
 	figcaption {
-		color: #6F8488;
+		
 	}
-	ul {
-		list-style-type: disc;
-		list-style-position: inside;
-		margin-bottom: 2em;
-		line-height: 2;
-		font-size: inherit;
-	}
-	ol {
-		list-style-type: decimal;
-		list-style-position: inside;
-		margin-bottom: 2em;
-		line-height: 2;
-		font-size: inherit;
-	}
+	// ul {
+	// 	list-style-type: disc;
+	// 	list-style-position: inside;
+	// 	margin-bottom: 2em;
+	// 	line-height: 2;
+	// 	font-size: inherit;
+	// }
+	// ol {
+	// 	list-style-type: decimal;
+	// 	list-style-position: inside;
+	// 	margin-bottom: 2em;
+	// 	line-height: 2;
+	// 	font-size: inherit;
+	// }
+}
+
+.text-green {
+	color: $green;
 }
