--- a/src/views/index.html
+++ b/src/views/index.html
@@ -12,6 +12,10 @@
             <!-- <a href="" class="btn btn--dark">
                 Кнопка
             </a> -->
+            @@include("../blocks/modules/case/case.html")
+            @@include("../blocks/modules/news/news.html")
+            @@include("../blocks/modules/about/about.html")
+            @@include("../blocks/modules/partners/partners.html")
             @@include("../blocks/modules/subscribe/subscribe.html")
         </main>
         @@include("../blocks/modules/footer/footer.html")
