--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -3363,6 +3363,16 @@ i {
   padding-right: 15px;
 }
 
+.articles {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.articles--around {
+  justify-content: space-around;
+}
+
 .search {
   position: relative;
 }
@@ -3429,6 +3439,51 @@ i {
   opacity: 0.7;
 }
 
+.title {
+  color: #00C25A;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 50px;
+  line-height: 1.3;
+}
+
+.date {
+  display: flex;
+  align-items: flex-end;
+  width: 178px;
+  flex-shrink: 0;
+}
+
+.date__date {
+  font-weight: bold;
+  font-size: 80px;
+  color: #00C25A;
+  line-height: 0.88;
+  margin-right: 10px;
+  flex-shrink: 0;
+}
+
+.date__mounth {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 23px;
+}
+
+.date__year {
+  color: #BDBDBD;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 1;
+}
+
+.input {
+  border: 1px solid #2E2E2E;
+  padding-left: 18px;
+  padding-right: 18px;
+  font-family: "Ubuntu", sans-serif;
+  height: 50px;
+}
+
 .text {
   line-height: 1.5;
   font-size: 16px;
@@ -3436,14 +3491,6 @@ i {
 
 .text p {
   margin-bottom: 1em;
-  padding-right: 44px;
-}
-
-.text blockquote {
-  margin-bottom: 1rem;
-  padding-left: 15px;
-  border-left: 2px solid #CAD4D4;
-  font-style: italic;
 }
 
 .text strong,
@@ -3465,12 +3512,12 @@ i {
 
 .text figure {
   display: block;
-  margin-bottom: 22px;
+  margin-bottom: 1rem;
 }
 
 .text picture {
   display: block;
-  margin-bottom: 5px;
+  margin-bottom: 1rem;
 }
 
 .text img {
@@ -3479,24 +3526,8 @@ i {
   height: auto;
 }
 
-.text figcaption {
-  color: #6F8488;
-}
-
-.text ul {
-  list-style-type: disc;
-  list-style-position: inside;
-  margin-bottom: 2em;
-  line-height: 2;
-  font-size: inherit;
-}
-
-.text ol {
-  list-style-type: decimal;
-  list-style-position: inside;
-  margin-bottom: 2em;
-  line-height: 2;
-  font-size: inherit;
+.text-green {
+  color: #00C25A;
 }
 
 .accent-line {
@@ -3896,6 +3927,256 @@ i {
   width: 194px;
 }
 
+.case {
+  padding-top: 50px;
+  margin-bottom: 50px;
+}
+
+.case__header {
+  margin-bottom: 50px;
+  height: 60px;
+  display: flex;
+  align-items: flex-end;
+}
+
+.case__content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.case__articles {
+  width: calc(100% / 12 * 8 - 16px);
+}
+
+.case__items {
+  margin-bottom: 15px;
+}
+
+.case__sidebar {
+  width: calc(100% / 12 * 4 - 16px);
+}
+
+.case__status {
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.case__link-all {
+  color: #00C25A;
+  font-size: 20px;
+}
+
+.case__link-all:hover {
+  text-decoration: none;
+}
+
+.case__form {
+  margin-bottom: 32px;
+}
+
+.item {
+  width: 248px;
+  text-decoration: none;
+  color: #2E2E2E;
+  margin-bottom: 25px;
+}
+
+.item--clear {
+  margin-bottom: 0px;
+  height: 0px;
+  overflow: hidden;
+  padding: 0px;
+  visibility: hidden;
+}
+
+.item__thumb {
+  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
+  height: 248px;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.item__thumb img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.item__title {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.3;
+}
+
+.status {
+  display: flex;
+  align-items: center;
+}
+
+.status__input {
+  flex-grow: 1;
+  min-width: 0;
+}
+
+.status__button {
+  padding-left: 32px;
+  padding-right: 32px;
+  margin-left: 1px;
+}
+
+.data-table {
+  background-color: #00C25A;
+  color: #2E2E2E;
+  padding: 32px 21px;
+}
+
+.data-table__title {
+  margin-bottom: 20px;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 1.3;
+}
+
+.data-table__title strong {
+  color: #ffffff;
+}
+
+.data-table__table {
+  font-weight: 500;
+  font-size: 18px;
+  border-collapse: collapse;
+  width: 100%;
+  border: 3px solid #00C25A;
+}
+
+.data-table__table td {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.data-table__table td:first-child {
+  width: 60%;
+  padding-right: 10px;
+}
+
+.data-table__table td:last-child {
+  width: 40%;
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.data-table__table td,
+.data-table__table th {
+  border: 2px solid #ffffff;
+}
+
+.news {
+  padding-top: 50px;
+  margin-bottom: 50px;
+}
+
+.news__title {
+  margin-bottom: 50px;
+}
+
+.article {
+  display: flex;
+  width: calc(50% - 16px);
+  background: #ffffff;
+  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
+  color: #2E2E2E;
+  text-decoration: none;
+  margin-bottom: 32px;
+}
+
+.article:hover {
+  opacity: 0.7;
+}
+
+.article__column--date {
+  padding: 6px 12px 12px 10px;
+  flex-shrink: 0;
+}
+
+.article__column--text {
+  padding: 25px 25px 25px 12px;
+  flex-grow: 1;
+}
+
+.article__title {
+  font-weight: bold;
+  font-size: 20px;
+  margin-bottom: 20px;
+  line-height: 1.3;
+}
+
+.about {
+  margin-bottom: 50px;
+  padding-top: 50px;
+}
+
+.about__title {
+  margin-bottom: 38px;
+}
+
+.about__columns {
+  display: flex;
+  justify-content: space-between;
+}
+
+.about__column--video {
+  width: calc(100% / 12 * 7 - 16px);
+}
+
+.about__column--video iframe {
+  height: 570px;
+  width: 100%;
+}
+
+.about__column--content {
+  width: calc(100% / 12 * 5 - 16px);
+}
+
+.partners {
+  margin-bottom: 104px;
+  padding-top: 50px;
+}
+
+.partners__title {
+  margin-bottom: 67px;
+}
+
+.front-partner {
+  text-decoration: none;
+  display: flex;
+  width: 248px;
+  height: 248px;
+  padding: 10px;
+}
+
+.front-partner--clear {
+  height: 0px !important;
+  visibility: hidden;
+  overflow: hidden;
+  padding: 0px;
+}
+
+.front-partner:hover img {
+  filter: grayscale(0%);
+  -webkit-filter: grayscale(0);
+}
+
+.front-partner img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  filter: grayscale(100%);
+  filter: #808080;
+  -webkit-filter: grayscale(1);
+  transition: all 0.3s;
+}
+
 @media all and (min-width: 0px) {
   .mm-wrapper_opening .mm-menu_columns-0.mm-menu_opened ~ .mm-slideout {
     -webkit-transform: translate3d(0, 0, 0);
@@ -4040,11 +4321,82 @@ i {
     font-weight: bold;
     font-size: 30px;
   }
-}
 
-@media only screen and (max-width: 1260px) {
-  .text p {
-    padding-right: 0px;
+  .case__articles {
+    width: calc(100% / 12 * 8 - 10px);
+  }
+
+  .case__sidebar {
+    width: calc(100% / 12 * 4 - 10px);
+  }
+
+  .case__form {
+    margin-bottom: 20px;
+  }
+
+  .item {
+    width: 180px;
+  }
+
+  .item__thumb {
+    height: 180px;
+    margin-bottom: 16px;
+  }
+
+  .item__title {
+    font-size: 16px;
+  }
+
+  .status__button {
+    padding-left: 14px;
+    padding-right: 14px;
+  }
+
+  .data-table__title {
+    margin-bottom: 10px;
+  }
+
+  .data-table__table {
+    font-size: 16px;
+  }
+
+  .data-table__table td {
+    padding-top: 14px;
+    padding-bottom: 14px;
+  }
+
+  .data-table__table td:first-child {
+    width: 75%;
+  }
+
+  .data-table__table td:last-child {
+    width: 25%;
+  }
+
+  .article {
+    margin-bottom: 20px;
+    width: calc(50% - 10px);
+  }
+
+  .about__column--video {
+    width: calc(100% / 12 * 8 - 10px);
+  }
+
+  .about__column--video iframe {
+    height: 470px;
+  }
+
+  .about__column--content {
+    width: calc(100% / 12 * 4 - 10px);
+  }
+
+  .partners__title {
+    margin-bottom: 32px;
+  }
+
+  .front-partner {
+    width: 180px;
+    height: 180px;
   }
 }
 
