--- a/src/styles/base/_ui.scss
+++ b/src/styles/base/_ui.scss
@@ -56,3 +56,45 @@
 		opacity: 0.7;
 	}
 }
+
+.title {
+	color: $green;
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 50px;
+	line-height: 1.3;
+}
+
+.date {
+	display: flex;
+	align-items: flex-end;
+	width: 178px;
+	flex-shrink: 0;
+	&__date {
+		font-weight: bold;
+		font-size: 80px;
+		color: $green;
+		line-height: 0.88;
+		margin-right: 10px;
+		flex-shrink: 0;
+	}
+	&__mounth {
+		font-weight: bold;
+		font-size: 20px;
+		line-height: 23px;
+	}
+	&__year {
+		color: #BDBDBD;
+		font-weight: bold;
+		font-size: 30px;
+		line-height: 1;
+	}
+}
+
+.input {
+	border: 1px solid $dark;
+	padding-left: 18px;
+	padding-right: 18px;
+	font-family: $font-main;
+	height: 50px;
+}
