--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -5,6 +5,7 @@
 @import "modules/modal/modal";
 @import "modules/breadcrumbs/breadcrumbs";
 @import "modules/sidebar/sidebar";
+@import "modules/gallery/gallery";
 
 // Front
 @import "modules/intro/intro";
@@ -15,3 +16,4 @@
 
 //Pages
 @import "modules/single/single";
+@import "modules/product/product";
