--- a/src/views/18-page.html
+++ b/src/views/18-page.html
@@ -66,7 +66,9 @@
                                         Возможно оформит товар под ЗАКАЗ, с более полным ассортиментом Вы можете ознакомится на сайте FRANKE  
                                         Make It Wonderful - создавайте удивительное ......
                                     </p>
-                                    <img src="http://placehold.it/1600x900" alt="Картинка">
+                                    <picture>
+                                        <img src="http://placehold.it/1600x900" alt="Картинка">
+                                    </picture>
                                 </div>
                             </div>
                         </div>
