--- a/src/blocks/modules/case/case.scss
+++ b/src/blocks/modules/case/case.scss
@@ -52,9 +52,13 @@
 	width: 248px;
 	text-decoration: none;
 	color: $dark;
-	margin-bottom: 25px;
+	margin-bottom: 30px;
 	@include r(1700) {
 		width: 180px;
+		margin-bottom: 25px;
+	}
+	&:hover {
+		opacity: 0.7;
 	}
 	&--clear {
 		margin-bottom: 0px;
