--- a/src/styles/base/_ui.scss
+++ b/src/styles/base/_ui.scss
@@ -43,6 +43,7 @@
 	}
 	&--green {
 		background-color: $green;
+		color: $light;
 	}
 	&--gray {
 		// color: $gray;
@@ -72,6 +73,12 @@
 	padding-left: 20px;
 	line-height: 1.2;
 	width: fit-content;
+	&--product {
+		font-size: 20px;
+		&:after {
+			bottom: 1px;
+		}
+	}
 	&:after {
 		left: 0px;
 		position: absolute;
@@ -159,5 +166,135 @@
 	}
 	&__title {
 		margin-bottom: 3px;
+	}
+}
+
+.link-file {
+	display: flex;
+	align-items: center;
+	text-decoration: none;
+	color: $dark;
+	margin-bottom: 10px;
+	&:hover {
+		opacity: 0.7;
+		.link-file__title {
+			strong {
+				color: $green;
+			}
+		}
+	}
+	&__icon {
+		width: 60px;
+		height: 60px;
+		display: block;
+		margin-right: 19px;
+		flex-shrink: 0;
+	}
+	&__title {
+		strong {
+			transition: 0.3s all;
+			color: #BDBDBD;
+			text-decoration: underline;
+		}
+	}
+}
+
+.vacancy {
+	display: block;
+	padding: 26px 32px 30px 32px;
+	background: $light;
+	box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
+	text-decoration: none;
+	color: $dark;
+	width: calc(50% - 16px);
+	margin-bottom: 32px;
+	&__title {
+		line-height: 1.3;
+		margin-bottom: 20px;
+		font-weight: bold;
+		font-size: 20px;
+	}
+	&__discript {
+
+	}
+	&__link {
+		text-decoration: underline;
+		color: $green;
+	}
+}
+
+.pagination {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	&__counter {
+		margin-left: 85px;
+		margin-right: 85px;
+		font-weight: bold;
+		span {
+			color: $green;
+			font-size: 50px;
+			vertical-align: middle;
+		}
+		sup {
+			vertical-align: super;
+			line-height: 24px;
+		}
+	}
+}
+
+.counter {
+	display: flex;
+	align-items: center;
+	&__btn {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		height: 50px;
+		width: 50px;
+		background: none;
+		cursor: pointer;
+		transition: 0.3s all;
+		&:hover {
+			opacity: 0.7;
+		}
+		svg {
+			display: block;
+			width: 20px;
+			height: 20px;
+		}
+		&--minus {
+
+		}
+		&--plus {
+
+		}
+	}
+	&__input {
+		position: relative;
+		input {
+			box-sizing: border-box;
+			height: 50px;
+			font-weight: 500;
+			font-size: 18px;
+			border: 1px solid #E5E5E5;
+			position: relative;
+			width: 115px;
+			padding-left: 18px;
+			padding-right: 32px;
+			&::-webkit-outer-spin-button,
+			&::-webkit-inner-spin-button {
+				-webkit-appearance: none;
+				margin: 0;
+				-moz-appearance: textfield;
+			}
+		}
+	}
+	&__type {
+		position: absolute;
+		top: 50%;
+		right: 7px;
+		transform: translateY(-50%);
+		color: #BDBDBD;
 	}
 }
