--- a/src/views/20-page.html
+++ b/src/views/20-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>2. Новинки</title>
+    <title>20. Вакансии</title>
     @@include("../blocks/modules/head/head.html")
 </head>
 <body class="body">
@@ -9,6 +9,105 @@
         @@include("../blocks/modules/header/header.html")
         <main class="layout__main">
             @@include("../blocks/modules/breadcrumbs/breadcrumbs.html")
+            <section class="single">
+                <div class="container">
+                    <div class="single__content">
+                        <h2 class="title single__title">
+                            Вакансии
+                        </h2>
+                        <div class="articles single__articles">
+                            <a href="" class="vacancy">
+                                <h3 class="vacancy__title">
+                                    Менеджер по приему заказов
+                                </h3>
+                                <p class="vacancy__discript">
+                                    График работы: 2/2, официальное трудоустройство.
+                                </p>
+                                <span class="vacancy__link">
+                                    Подробнее
+                                </span>
+                            </a>
+                            <a href="" class="vacancy">
+                                <h3 class="vacancy__title">
+                                    Менеджер по приему заказов
+                                </h3>
+                                <p class="vacancy__discript">
+                                    График работы: 2/2, официальное трудоустройство.
+                                </p>
+                                <span class="vacancy__link">
+                                    Подробнее
+                                </span>
+                            </a>
+                            <a href="" class="vacancy">
+                                <h3 class="vacancy__title">
+                                    Менеджер по приему заказов
+                                </h3>
+                                <p class="vacancy__discript">
+                                    График работы: 2/2, официальное трудоустройство.
+                                </p>
+                                <span class="vacancy__link">
+                                    Подробнее
+                                </span>
+                            </a>
+                            <a href="" class="vacancy">
+                                <h3 class="vacancy__title">
+                                    Менеджер по приему заказов
+                                </h3>
+                                <p class="vacancy__discript">
+                                    График работы: 2/2, официальное трудоустройство.
+                                </p>
+                                <span class="vacancy__link">
+                                    Подробнее
+                                </span>
+                            </a>
+                            <a href="" class="vacancy">
+                                <h3 class="vacancy__title">
+                                    Менеджер по приему заказов
+                                </h3>
+                                <p class="vacancy__discript">
+                                    График работы: 2/2, официальное трудоустройство.
+                                </p>
+                                <span class="vacancy__link">
+                                    Подробнее
+                                </span>
+                            </a>
+                            <a href="" class="vacancy">
+                                <h3 class="vacancy__title">
+                                    Менеджер по приему заказов
+                                </h3>
+                                <p class="vacancy__discript">
+                                    График работы: 2/2, официальное трудоустройство.
+                                </p>
+                                <span class="vacancy__link">
+                                    Подробнее
+                                </span>
+                            </a>
+                            <a href="" class="vacancy">
+                                <h3 class="vacancy__title">
+                                    Менеджер по приему заказов
+                                </h3>
+                                <p class="vacancy__discript">
+                                    График работы: 2/2, официальное трудоустройство.
+                                </p>
+                                <span class="vacancy__link">
+                                    Подробнее
+                                </span>
+                            </a>
+                            <a href="" class="vacancy">
+                                <h3 class="vacancy__title">
+                                    Менеджер по приему заказов
+                                </h3>
+                                <p class="vacancy__discript">
+                                    График работы: 2/2, официальное трудоустройство.
+                                </p>
+                                <span class="vacancy__link">
+                                    Подробнее
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         @@include("../blocks/modules/footer/footer.html")
         @@include("../blocks/modules/temp/temp.html")
