--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -22,3 +22,4 @@
 @import "modules/product/product";
 @import "modules/catalog/catalog";
 @import "modules/service/service";
+@import "modules/contacts/contacts";
