--- a/src/views/25-page.html
+++ b/src/views/25-page.html
@@ -15,14 +15,197 @@
                         <h2 class="title single__title">
                             Связаться с нами
                         </h2>
-                        <div class="single__columns">
-                            <div class="single__column single__column--8">
-                                <div class="text single__text">
+                        <div class="contacts">
+                            <div class="text contacts__content">
+                                236023, Россия, г. Калининград, Советский проспект, 125 <br>
+                                <a href="mailto:online@baltlaminat.ru">online@baltlaminat.ru</a>
+                            </div>
+                            <div class="contacts__socials">
+                                @@include("../blocks/modules/socials/socials-accent.html")
+                            </div>
+                            <div class="contacts__columns">
+                                <div class="contacts__column">
+                                    <div class="contacts__block contacts__block--title">
+                                        <h3 class="contacts__main-title">
+                                            Режим работы
+                                        </h3>
+                                        <p class="contacts__text">
+                                            понедельник-пятница: 10:00 - 19:00
+                                        </p>
+                                    </div>
 
+                                    <div class="contacts__block">
+                                        <p class="contacts__title">
+                                            Телефон общий:
+                                        </p>
+                                        <a href="tel:+74012777001" class="contacts__phone">
+                                            +7 (4012) 777-001
+                                        </a>
+                                        <a href="mailto:fasad@baltlaminat.ru" class="contacts__link">
+                                            fasad@baltlaminat.ru
+                                        </a>
+                                    </div>
+
+                                    <div class="contacts__block">
+                                        <p class="contacts__title">
+                                            Телефон оператора:
+                                        </p>
+                                        <a href="tel:+74012313041" class="contacts__phone">
+                                            +7 (4012) 313-041
+                                        </a>
+                                        <a href="mailto:fasad@baltlaminat.ru" class="contacts__link">
+                                            fasad@baltlaminat.ru
+                                        </a>
+                                    </div>
+
+                                    <div class="contacts__block">
+                                        <p class="contacts__title">
+                                            Телефон консультации о наличии и стоимости товара:
+                                        </p>
+                                        <a href="tel:+74012777001" class="contacts__phone">
+                                            +7 (4012) 777-001
+                                        </a>
+                                        <a href="mailto:fasad@baltlaminat.ru" class="contacts__link">
+                                            fasad@baltlaminat.ru
+                                        </a>
+                                    </div>
+
+                                    <div class="contacts__block">
+                                        <p class="contacts__title">
+                                            Телефон диспетчера доставки:
+                                        </p>
+                                        <a href="tel:+74012777001" class="contacts__phone">
+                                            +7 (4012) 777-001
+                                        </a>
+                                        <a href="mailto:fasad@baltlaminat.ru" class="contacts__link">
+                                            fasad@baltlaminat.ru
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="contacts__column">
+
+                                    <div class="contacts__block">
+                                        <p class="contacts__title">
+                                            Телефон отдела профи:
+                                        </p>
+                                        <a href="tel:+74012777001" class="contacts__phone">
+                                            +7 (4012) 777-001
+                                        </a>
+                                        <a href="mailto:fasad@baltlaminat.ru" class="contacts__link">
+                                            fasad@baltlaminat.ru
+                                        </a>
+                                    </div>
+
+                                    <div class="contacts__block">
+                                        <p class="contacts__title">
+                                            Телефон отдела приёма заказов (распил, оклейка и др.):
+                                        </p>
+                                        <a href="tel:+74012313041" class="contacts__phone">
+                                            +7 (4012) 313-041
+                                        </a>
+                                        <a href="mailto:fasad@baltlaminat.ru" class="contacts__link">
+                                            fasad@baltlaminat.ru
+                                        </a>
+                                    </div>
+
+                                    <div class="contacts__block">
+                                        <p class="contacts__title">
+                                            Телефон отдела "Фасады":
+                                        </p>
+                                        <a href="tel:+74012777001" class="contacts__phone">
+                                            +7 (4012) 777-001
+                                        </a>
+                                        <a href="mailto:fasad@baltlaminat.ru" class="contacts__link">
+                                            fasad@baltlaminat.ru
+                                        </a>
+                                    </div>
+
+                                    <div class="contacts__block">
+                                        <p class="contacts__title">
+                                            Телефон отдела "Инструмент":
+                                        </p>
+                                        <a href="tel:+74012777001" class="contacts__phone">
+                                            +7 (4012) 777-001
+                                        </a>
+                                        <a href="mailto:fasad@baltlaminat.ru" class="contacts__link">
+                                            fasad@baltlaminat.ru
+                                        </a>
+                                    </div>
+
+                                    <div class="contacts__block">
+                                        <p class="contacts__title">
+                                            Телефон отдела напольных покрытий:
+                                        </p>
+                                        <a href="tel:+74012777001" class="contacts__phone">
+                                            +7 (4012) 777-001
+                                        </a>
+                                        <a href="mailto:fasad@baltlaminat.ru" class="contacts__link">
+                                            fasad@baltlaminat.ru
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="contacts__column contacts__column--blue">
+                                    <div class="contacts__block contacts__block--title">
+                                        <h3 class="contacts__main-title">
+                                            Режим работы
+                                        </h3>
+                                        <p class="contacts__text">
+                                            понедельник-пятница: 10:00 - 19:00
+                                        </p>
+                                    </div>
+
+
+                                    <div class="contacts__block">
+                                        <p class="contacts__title">
+                                            Телефон общий:
+                                        </p>
+                                        <a href="tel:+74012777001" class="contacts__phone">
+                                            +7 (4012) 777-001
+                                        </a>
+                                        <a href="mailto:fasad@baltlaminat.ru" class="contacts__link">
+                                            fasad@baltlaminat.ru
+                                        </a>
+                                    </div>
+
+                                    <div class="contacts__block">
+                                        <p class="contacts__title">
+                                            Телефон оператора:
+                                        </p>
+                                        <a href="tel:+74012313041" class="contacts__phone">
+                                            +7 (4012) 313-041
+                                        </a>
+                                        <a href="mailto:fasad@baltlaminat.ru" class="contacts__link">
+                                            fasad@baltlaminat.ru
+                                        </a>
+                                    </div>
+
+                                    <div class="contacts__block">
+                                        <p class="contacts__title">
+                                            Телефон консультации о наличии и стоимости товара:
+                                        </p>
+                                        <a href="tel:+74012777001" class="contacts__phone">
+                                            +7 (4012) 777-001
+                                        </a>
+                                        <a href="mailto:fasad@baltlaminat.ru" class="contacts__link">
+                                            fasad@baltlaminat.ru
+                                        </a>
+                                    </div>
+
+                                    <div class="contacts__block">
+                                        <p class="contacts__title">
+                                            Телефон диспетчера доставки:
+                                        </p>
+                                        <a href="tel:+74012777001" class="contacts__phone">
+                                            +7 (4012) 777-001
+                                        </a>
+                                        <a href="mailto:fasad@baltlaminat.ru" class="contacts__link">
+                                            fasad@baltlaminat.ru
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="single__column single__column--4">
-                                <!-- <img src="img/discont.png" alt="Карта скидок" class="single__ill"> -->
+                            <div class="contacts__map">
+                                <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4cb48d3214796d0aebebe2f748e9256d8fa121fe81efdfa32d2eda2a2a60558d&amp;width=100%25&amp;lang=ru_RU&amp;scroll=false"></script>
                             </div>
                         </div>
                     </div>
