--- a/src/blocks/modules/filter/filter.scss
+++ b/src/blocks/modules/filter/filter.scss
@@ -38,6 +38,27 @@
 		width: 108px;
 		font-size: 16px;
 	}
+	&__block-header {
+		display: flex;
+		justify-content: space-between;
+		margin-bottom: 18px;
+	}
+	&__name {
+		flex-grow: 1;
+		font-weight: bold;
+		line-height: 1.2;
+	}
+	&__btn-all {
+		font-weight: bold;
+		font-size: 16px;
+		line-height: 1.2;
+		color: #BDBDBD;
+		background: none;
+		height: 16px;
+		cursor: pointer;
+		transition: 0.3s all;
+		margin-right: 10px;
+	}
 }
 
 .filter-word {
