--- a/src/styles/base/_ui.scss
+++ b/src/styles/base/_ui.scss
@@ -126,17 +126,6 @@
 	}
 }
 
-// .input {
-// 	border: 1px solid $dark;
-// 	padding-left: 18px;
-// 	padding-right: 18px;
-// 	font-family: $font-main;
-// 	height: 50px;
-// 	&:placeholder {
-// 		font-family: $font-main;
-// 	}
-// }
-
 .input {
 	margin-bottom: 16px;
 	display: block;
@@ -382,6 +371,9 @@
 		&--75 {
 			width: 75%;
 		}
+		&--80 {
+			width: 80%;
+		}
 	}
 	&__light {
 		color: #828282;
@@ -429,9 +421,23 @@
 	}
 }
 
-.zbs {
-	cursor: pointer;
-	width: 50px;
-	background-color: red;
-	height: 50px;
+.filter-range {
+	margin-bottom: 32px;
+	&__toolbar {
+		display: flex;
+		justify-content: space-between;
+	}
+	&__input {
+		display: block;
+		width: 108px;
+		height: 30px;
+		border: 1px solid $dark;
+		box-sizing: border-box;
+		text-align: center;
+		font-family: $font-main;
+	}
+}
+
+.range-slider {
+	margin-bottom: 36px;
 }
