--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -5133,10 +5133,6 @@ i {
   font-family: "Ubuntu", sans-serif;
 }
 
-.range-slider {
-  margin-bottom: 36px;
-}
-
 .text {
   line-height: 1.5;
   font-size: 16px;
@@ -5252,7 +5248,7 @@ i {
 }
 
 .accent-line__content {
-  padding-right: 65px;
+  padding-right: 25px;
 }
 
 .accent-line__close {
@@ -5862,6 +5858,7 @@ i {
 .filter__section {
   border-bottom: 2px solid #F2F2F2;
   margin-bottom: 32px;
+  padding-bottom: 32px;
 }
 
 .filter__title {
@@ -5887,6 +5884,7 @@ i {
 
 .filter__content--scroll .simplebar-vertical {
   width: 4px;
+  background-color: #F2F2F2;
 }
 
 .filter__content--scroll .simplebar-scrollbar {
@@ -5938,13 +5936,18 @@ i {
 }
 
 .filter-drop {
-  margin-bottom: 10px;
+  margin-bottom: 18px;
+}
+
+.filter-drop:last-child {
+  margin-bottom: 0px;
 }
 
 .filter-drop--opened .filter-drop__content {
   max-height: 10000px;
   opacity: 1;
   visibility: visible;
+  padding-top: 18px;
 }
 
 .filter-drop--opened .filter-drop__icon {
@@ -5955,7 +5958,6 @@ i {
   display: flex;
   justify-content: space-between;
   flex-shrink: 0;
-  margin-bottom: 18px;
   cursor: pointer;
 }
 
@@ -5967,6 +5969,7 @@ i {
   transform: rotate(180deg);
   top: 5px;
   position: relative;
+  flex-shrink: 0;
 }
 
 .filter-drop__title {
@@ -5993,6 +5996,7 @@ i {
 
 .filter-drop__content {
   padding-left: 22px;
+  padding-top: 0px;
   max-height: 0px;
   visibility: hidden;
   opacity: 0;
@@ -6109,7 +6113,6 @@ i {
   width: 100%;
   z-index: 3;
   background-color: #ffffff;
-  margin-bottom: 36px;
 }
 
 .filter-dropdown:focus {
@@ -6450,7 +6453,6 @@ i {
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
-  margin-bottom: 32px;
 }
 
 .filter-toggle__title {
