--- a/src/blocks/modules/filter/filter.scss
+++ b/src/blocks/modules/filter/filter.scss
@@ -3,6 +3,7 @@
 	&__section {
 		border-bottom: 2px solid #F2F2F2;
 		margin-bottom: 32px;
+		padding-bottom: 32px;
 	}
 	&__title {
 		margin-bottom: 16px;
@@ -23,6 +24,7 @@
 			// overflow-y: scroll;
 			.simplebar-vertical {
 				width: 4px;
+				background-color: #F2F2F2;
 			}
 			.simplebar-scrollbar {
 				background-color: #BDBDBD;
@@ -71,12 +73,16 @@
 }
 
 .filter-drop {
-	margin-bottom: 10px;
+	margin-bottom: 18px;
+	&:last-child {
+		margin-bottom: 0px;
+	}
 	&--opened {
 		.filter-drop__content {
 			max-height: 10000px;
 			opacity: 1;
 			visibility: visible;
+			padding-top: 18px;
 		}
 		.filter-drop__icon {
 			transform: rotate(0deg);
@@ -86,7 +92,6 @@
 		display: flex;
 		justify-content: space-between;
 		flex-shrink: 0;
-		margin-bottom: 18px;
 		cursor: pointer;
 	}
 	&__icon {
@@ -97,6 +102,7 @@
 		transform: rotate(180deg);
 		top: 5px;
 		position: relative;
+		flex-shrink: 0;
 	}
 	&__title {
 		flex-grow: 1;
@@ -119,6 +125,8 @@
 	}
 	&__content {
 		padding-left: 22px;
+		// padding-top: 18px;
+		padding-top: 0px;
 		max-height: 0px;
 		visibility: hidden;
 		opacity: 0;
@@ -224,15 +232,10 @@
 }
 
 .filter-dropdown {
-
-}
-
-.filter-dropdown {
 	position: relative;
 	width: 100%;
 	z-index: 3;
 	background-color: $light;
-	margin-bottom: 36px;
 	&:focus {
 		outline: 0;
 	}
@@ -485,7 +488,6 @@
 }
 .filter-dropdown__item {
 	cursor: default;
-	// transition: 0.3s all;
 	&:hover {
 		color: $dark;
 	}
@@ -546,7 +548,6 @@
 	justify-content: space-between;
 	align-items: center;
 	cursor: pointer;
-	margin-bottom: 32px;
 	&__title {
 		font-weight: bold;
 		user-select: none;
