--- a/src/views/6-page.html
+++ b/src/views/6-page.html
@@ -245,8 +245,11 @@
                             </div>
 
                             <div class="grid__column grid__column--3">
-                                <div class="grid__block grid__block--sticky">
+                                <div class="grid__block grid__block--sticky grid__block--product-card">
                                     <div class="product-card">
+                                        <h3 class="product-card__title">
+                                            Варочная поверхность FRANKE TREND LINE FHTL 755 4G TC BT C черная матовая
+                                        </h3>
                                         <div class="product-card__price">
                                             <p class="product-card__price-title">
                                                 цена со скидкой
