--- a/src/views/8-page.html
+++ b/src/views/8-page.html
@@ -204,7 +204,7 @@
                                                             </span>
                                                         </div>
                                                         <div class="table__cell table__cell--15">
-                                                            <a href="" class="table__link">
+                                                            <a href="#modal-service" data-fancybox href="" class="table__link">
                                                                 Подробнее
                                                             </a>
                                                         </div>
@@ -233,7 +233,7 @@
                                                             </span>
                                                         </div>
                                                         <div class="table__cell table__cell--15">
-                                                            <a href="" class="table__link">
+                                                            <a href="#modal-service" data-fancybox href="" class="table__link">
                                                                 Подробнее
                                                             </a>
                                                         </div>
@@ -262,7 +262,7 @@
                                                             </span>
                                                         </div>
                                                         <div class="table__cell table__cell--15">
-                                                            <a href="" class="table__link">
+                                                            <a href="#modal-service" data-fancybox href="" class="table__link">
                                                                 Подробнее
                                                             </a>
                                                         </div>
@@ -291,7 +291,7 @@
                                                             </span>
                                                         </div>
                                                         <div class="table__cell table__cell--15">
-                                                            <a href="" class="table__link">
+                                                            <a href="#modal-service" data-fancybox href="" class="table__link">
                                                                 Подробнее
                                                             </a>
                                                         </div>
@@ -320,7 +320,7 @@
                                                             </span>
                                                         </div>
                                                         <div class="table__cell table__cell--15">
-                                                            <a href="" class="table__link">
+                                                            <a href="#modal-service" data-fancybox href="" class="table__link">
                                                                 Подробнее
                                                             </a>
                                                         </div>
