--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -4187,6 +4187,34 @@ body.compensate-for-scrollbar {
   bottom: 10px;
 }
 
+.dz-preview {
+  width: 50%;
+  padding: 25px;
+  text-align: center;
+}
+
+.dz-image {
+  margin-bottom: 10px;
+}
+
+.dz-image img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.dz-success-mark {
+  display: none;
+}
+
+.dz-error-mark {
+  display: none;
+}
+
+.dz-error-message {
+  display: none;
+}
+
 /* Magnific Popup CSS */
 
 .mfp-bg {
@@ -5036,7 +5064,7 @@ i {
 }
 
 .table__cell--10 {
-  width: 15%;
+  width: 10%;
 }
 
 .table__cell--15 {
@@ -5055,12 +5083,22 @@ i {
   width: 45%;
 }
 
+.table__cell--50 {
+  width: 50%;
+}
+
 .table__cell--75 {
   width: 75%;
 }
 
 .table__cell--80 {
   width: 80%;
+}
+
+.table__cell--flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .table__light {
@@ -5070,7 +5108,6 @@ i {
 .table__price {
   color: #00C25A;
   font-size: 14px;
-  text-transform: uppercase;
 }
 
 .table__price strong {
@@ -5085,6 +5122,54 @@ i {
 
 .table__link:hover {
   text-decoration: none;
+}
+
+.table__text {
+  flex-grow: 1;
+}
+
+.table__text--strike {
+  text-decoration: line-through;
+}
+
+.table__arrow {
+  padding: 4px;
+  cursor: pointer;
+}
+
+.table__arrow svg {
+  width: 8px;
+  height: 4px;
+}
+
+.table__arrow--active {
+  fill: #00C25A !important;
+}
+
+.table-form {
+  display: flex;
+  aling-items: center;
+}
+
+.table-form__input {
+  box-sizing: border-box;
+  border: 1px solid #E5E5E5;
+  text-align: center;
+  flex-grow: 1;
+  min-width: 0px;
+}
+
+.table-form__btn {
+  background-color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 4px;
+}
+
+.table-form__btn svg {
+  width: 30px;
+  height: 30px;
 }
 
 .dropfile {
@@ -5512,6 +5597,9 @@ i {
   padding-top: 56px;
   padding-bottom: 56px;
   background-color: #00C25A;
+  background-image: url("../img/bg-green.svg");
+  background-repeat: no-repeat;
+  background-position: left bottom;
 }
 
 .bottom__nav {
@@ -5647,6 +5735,19 @@ i {
   margin-bottom: 52px;
   display: flex;
   justify-content: space-between;
+}
+
+.modal-service__content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-service__slider {
+  width: calc(50% - 16px);
+}
+
+.modal-service__text {
+  width: calc(50% - 16px);
 }
 
 .breadcrumbs {
@@ -7057,6 +7158,22 @@ i {
   background-color: #ffffff;
   box-shadow: 2px 4px 30px rgba(0, 0, 0, 0.14);
   padding: 30px 30px 40px 40px;
+}
+
+.product-card__title {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.1;
+  max-height: 0px;
+  margin-bottom: 0px;
+  opacity: 0;
+  transition: 0.3s all;
+}
+
+.product-card__title--visible {
+  opacity: 1;
+  margin-bottom: 34px;
+  max-height: 1000px;
 }
 
 .product-card__price {
