--- a/src/blocks/modules/modal/modal.scss
+++ b/src/blocks/modules/modal/modal.scss
@@ -54,3 +54,16 @@
 		justify-content: space-between;
 	}
 }
+
+.modal-service {
+	&__content {
+		display: flex;
+		justify-content: space-between;
+	}
+	&__slider {
+		width: calc(50% - 16px);
+	}
+	&__text {
+		width: calc(50% - 16px);
+	}
+}
