--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -4780,7 +4780,7 @@ i {
 .title-small:after {
   left: 0px;
   position: absolute;
-  bottom: 3px;
+  bottom: 1px;
   height: 4px;
   width: 100%;
   background-color: #00C25A;
@@ -5403,6 +5403,53 @@ i {
   margin-right: 0px;
 }
 
+.head-mobile {
+  display: none;
+  padding-top: 13px;
+  padding-bottom: 13px;
+}
+
+.head-mobile__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.head-mobile__search {
+  flex-grow: 1;
+  margin-right: 10px;
+}
+
+.head-mobile__input {
+  box-sizing: border-box;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.06);
+  background-color: #ffffff;
+  border: none;
+  height: 30px;
+  font-size: 16px;
+  overflow: hidden;
+  border-radius: 4px;
+  display: block;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: 10px center;
+  padding-left: 35px;
+  padding-right: 12px;
+}
+
+.head-mobile__btn {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.head-mobile__btn svg {
+  width: 24px;
+  height: 24px;
+}
+
 .top-nav {
   display: flex;
   align-items: center;
@@ -5654,6 +5701,12 @@ i {
   margin-bottom: 17px;
 }
 
+.toolbar__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .temp {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -5676,6 +5729,10 @@ i {
   padding-bottom: 50px;
 }
 
+.modal-menu__main-title {
+  margin-bottom: 20px;
+}
+
 .modal-menu__content {
   column-count: 4;
   column-gap: 32px;
@@ -5691,6 +5748,7 @@ i {
   text-decoration: none;
   margin-bottom: 8px;
   page-break-inside: avoid;
+  width: fit-content;
 }
 
 .modal-menu__title:hover {
@@ -5712,6 +5770,7 @@ i {
   display: block;
   color: #828282;
   text-decoration: none;
+  width: fit-content;
 }
 
 .modal-menu__link:hover {
@@ -6673,7 +6732,47 @@ i {
   margin-bottom: 50px;
   height: 60px;
   display: flex;
-  align-items: flex-end;
+}
+
+.case__title {
+  font-size: 30px;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-right: 120px;
+  padding-left: 0px;
+  transition: 0.3s all;
+  height: fit-content;
+  transition: 0.3s all;
+  cursor: pointer;
+}
+
+.case__title--active {
+  padding-left: 18px;
+  position: relative;
+}
+
+.case__title--active:after {
+  left: 0px;
+  position: absolute;
+  bottom: 12px;
+  height: 4px;
+  width: 100%;
+  background-color: #00C25A;
+  content: "";
+  z-index: 1;
+}
+
+.case__title--active span {
+  position: relative;
+  z-index: 2;
+}
+
+.case__title:last-child {
+  margin-right: 0px;
+}
+
+.case__title:hover {
+  opacity: 0.7;
 }
 
 .case__content {
@@ -8162,6 +8261,8 @@ i {
 @media only screen and (max-width: 1700px) {
   .container {
     max-width: 1210px;
+    padding-left: 8px;
+    padding-right: 8px;
   }
 
   .text iframe {
@@ -8210,6 +8311,7 @@ i {
 
   .bottom__btn {
     width: 280px;
+    border-radius: 4px;
   }
 
   .gallery__item {
@@ -8218,7 +8320,6 @@ i {
 
   .intro__content {
     padding: 41px 47px 63px 47px;
-    min-height: 500px;
   }
 
   .intro__thumb {
@@ -8228,6 +8329,10 @@ i {
   .intro__title {
     font-weight: bold;
     font-size: 30px;
+  }
+
+  .case__title {
+    margin-right: 80px;
   }
 
   .case__articles {
@@ -8331,6 +8436,184 @@ i {
   }
 }
 
+@media only screen and (max-width: 1200px) {
+  .btn {
+    font-size: 16px;
+  }
+
+  .title {
+    font-size: 30px;
+  }
+
+  .accent-line__container {
+    align-items: flex-start;
+  }
+
+  .head-main {
+    display: none;
+  }
+
+  .head-nav {
+    display: none;
+  }
+
+  .head-mobile {
+    display: block;
+  }
+
+  .subscribe__content {
+    display: block;
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+
+  .subscribe__text {
+    margin-right: 0px;
+    margin-bottom: 12px;
+    font-size: 16px;
+  }
+
+  .subscribe__form {
+    width: 100%;
+    justify-content: space-between;
+    overflow: hidden;
+    border-radius: 4px;
+  }
+
+  .subscribe__input {
+    width: auto;
+    flex-grow: 1;
+    margin-right: 0px;
+    font-size: 14px;
+  }
+
+  .subscribe__btn {
+    font-size: 14px;
+    width: 140px;
+  }
+
+  .bottom {
+    padding-top: 35px;
+    padding-bottom: 35px;
+  }
+
+  .bottom__nav {
+    column-count: 2;
+  }
+
+  .bottom__columns {
+    display: block;
+  }
+
+  .bottom__column {
+    width: 100%;
+    border-bottom: 1px solid #ffffff;
+  }
+
+  .bottom__column:last-child {
+    border-bottom: none;
+  }
+
+  .bottom__contacts {
+    display: flex;
+    align-items: center;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    border-top: 1px solid #ffffff;
+    border-bottom: 1px solid #ffffff;
+  }
+
+  .bottom__socials {
+    display: flex;
+    align-items: center;
+    margin-bottom: 0px;
+    margin-right: 20px;
+  }
+
+  .bottom__text {
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+
+  .bottom__text br {
+    display: none;
+  }
+
+  .bottom__btn {
+    margin-bottom: 0px;
+  }
+
+  .intro__columns {
+    display: block;
+    justify-content: center;
+    position: relative;
+    min-height: 180px;
+    padding-bottom: 88px;
+    min-height: 500px;
+  }
+
+  .intro__content {
+    text-align: center;
+    min-width: 272px;
+    display: block;
+    padding: 22px;
+    min-height: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+  }
+
+  .intro__thumb {
+    width: 100%;
+    min-height: 0px;
+    height: auto;
+    display: none;
+  }
+
+  .intro__thumb img {
+    width: 100%;
+    height: auto;
+  }
+
+  .intro__title {
+    font-size: 22px;
+    margin-bottom: 0px;
+  }
+
+  .intro__btn {
+    display: none;
+  }
+
+  .article {
+    margin-bottom: 20px;
+    width: 100%;
+    display: block;
+    padding: 20px 15px;
+  }
+
+  .article__column--date {
+    padding: 0px;
+    margin-bottom: 20px;
+  }
+
+  .article__column--text {
+    padding: 0px;
+  }
+
+  .about__columns {
+    display: block;
+  }
+
+  .about__column--video {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .about__column--content {
+    width: 100%;
+  }
+}
+
 @media all and (max-width: 900px) {
   .mfp-arrow {
     -webkit-transform: scale(0.75);
@@ -8409,6 +8692,12 @@ i {
   }
 }
 
+@media only screen and (max-width: 800px) {
+  .intro__columns {
+    min-height: 0px;
+  }
+}
+
 @media (max-width: 576px) {
   .fancybox-thumbs {
     width: 110px;
@@ -8420,6 +8709,42 @@ i {
 
   .fancybox-thumbs__list a {
     max-width: calc(100% - 10px);
+  }
+}
+
+@media only screen and (max-width: 440px) {
+  .title {
+    font-size: 22px;
+  }
+
+  .subscribe__form {
+    display: block;
+  }
+
+  .subscribe__input {
+    display: block;
+    width: 100%;
+  }
+
+  .subscribe__btn {
+    display: block;
+    width: 100%;
+  }
+
+  .bottom__nav {
+    column-count: 1;
+  }
+
+  .bottom__contacts {
+    display: block;
+  }
+
+  .bottom__socials {
+    margin-bottom: 15px;
+  }
+
+  .about__column--video iframe {
+    height: 200px;
   }
 }
 
