--- a/src/blocks/modules/intro/intro.scss
+++ b/src/blocks/modules/intro/intro.scss
@@ -1,6 +1,24 @@
+@include r(1700) {
+
+}
+@include r(1200) {
+
+}
+
 .intro {
 	&__columns {
 		display: flex;
+		@include r(1200) {
+			display: block;
+			justify-content: center;
+			position: relative;
+			min-height: 180px;
+			padding-bottom: 88px;
+			min-height: 500px;
+		}
+		@include r(800) {
+			min-height: 0px;
+		}
 	}
 	&__content {
 		background-color: $green;
@@ -12,7 +30,19 @@
 		align-items: flex-start;
 		@include r(1700) {
 			padding: 41px 47px 63px 47px;
-			min-height: 500px;
+		}
+		@include r(1200) {
+			text-align: center;
+			min-width: 272px;
+			display: block;
+			padding: 22px;
+			min-height: 0px;
+			margin-left: auto;
+			margin-right: auto;
+			max-width: 100%;
+			// position: absolute;
+			// left: 50%;
+			// transform: translateX(-50%);
 		}
 	}
 	&__thumb {
@@ -21,11 +51,21 @@
 		@include r(1700) {
 			min-height: 500px;
 		}
+		@include r(1200) {
+			width: 100%;
+			min-height: 0px;
+			height: auto;
+			display: none;
+		}
 		img {
 			display: block;
 			height: 100%;
 			width: 100%;
 			object-fit: cover;
+			@include r(1200) {
+				width: 100%;
+				height: auto;
+			}
 		}
 	}
 	&__logo {
@@ -44,8 +84,15 @@
 			font-weight: bold;
 			font-size: 30px;
 		}
+		@include r(1200) {
+			font-size: 22px;
+			margin-bottom: 0px;
+		}
 	}
 	&__btn {
 		width: 194px;
+		@include r(1200) {
+			display: none;
+		}
 	}
 }
