--- a/src/blocks/modules/modal/modal.scss
+++ b/src/blocks/modules/modal/modal.scss
@@ -3,6 +3,9 @@
 	min-height: 120vh;
 	padding-top: 50px;
 	padding-bottom: 50px;
+	&__main-title {
+		margin-bottom: 20px;
+	}
 	&__content {
 		column-count: 4;
 		column-gap: 32px;
@@ -16,6 +19,7 @@
 		text-decoration: none;
 		margin-bottom: 8px;
 		page-break-inside: avoid;
+		width: fit-content;
 		&:hover {
 			opacity: 0.7;
 		}
@@ -33,6 +37,7 @@
 		display: block;
 		color: #828282;
 		text-decoration: none;
+		width: fit-content;
 		&:hover {
 			opacity: 0.7;
 		}
