--- a/src/blocks/modules/subscribe/subscribe.scss
+++ b/src/blocks/modules/subscribe/subscribe.scss
@@ -1,3 +1,10 @@
+@include r(1700) {
+
+}
+@include r(1200) {
+
+}
+
 .subscribe {
 	background-color: $dark;
 	color: $light;
@@ -7,6 +14,11 @@
 		align-items: center;
 		padding-top: 33px;
 		padding-bottom: 33px;
+		@include r(1200) {
+			display: block;
+			padding-top: 25px;
+			padding-bottom: 25px;
+		}
 	}
 	&__text {
 		font-weight: bold;
@@ -17,11 +29,25 @@
 		@include r(1700) {
 			margin-right: 20px;
 		}
+		@include r(1200) {
+			margin-right: 0px;
+			margin-bottom: 12px;
+			font-size: 16px;
+		}
 	}
 	&__form {
 		flex-shrink: 0;
 		display: flex;
 		align-items: center;
+		@include r(1200) {
+			width: 100%;
+			justify-content: space-between;
+			overflow: hidden;
+			border-radius: 4px;
+		}
+		@include r(440) {
+			display: block;
+		}
 	}
 	&__input {
 		height: 50px;
@@ -36,6 +62,16 @@
 		@include r(1700) {
 			width: 280px;
 		}
+		@include r(1200) {
+			width: auto;
+			flex-grow: 1;
+			margin-right: 0px;
+			font-size: 14px;
+		}
+		@include r(440) {
+			display: block;
+			width: 100%;
+		}
 		&:placeholder {
 			color: #BDBDBD;
 		}
@@ -45,5 +81,13 @@
 		height: 50px;
 		background-color: $green;
 		text-transform: uppercase;
+		@include r(1200) {
+			font-size: 14px;
+			width: 140px;
+		}
+		@include r(440) {
+			display: block;
+			width: 100%;	
+		}
 	}
 }
