--- a/src/styles/base/_ui.scss
+++ b/src/styles/base/_ui.scss
@@ -36,6 +36,12 @@
 	font-weight: bold;
 	transition: 0.3s all;
 	cursor: pointer;
+	@include r(1700) {
+
+	}
+	@include r(1200) {
+		font-size: 16px;
+	}
 	&--dark {
 		background-color: $dark;
 		color: $light;
@@ -63,6 +69,15 @@
 	font-weight: bold;
 	font-size: 50px;
 	line-height: 1.3;
+	@include r(1700) {
+
+	}
+	@include r(1200) {
+		font-size: 30px;
+	}
+	@include r(440) {
+		font-size: 22px;
+	}
 }
 
 .title-small {
@@ -81,7 +96,7 @@
 	&:after {
 		left: 0px;
 		position: absolute;
-		bottom: 3px;
+		bottom: 1px;
 		height: 4px;
 		width: 100%;
 		background-color: $green;
